# HeadsetTracker

./: .gitignore  CMakeLists.txt  HeadsetTracker.desktop  README.md  dobuild  main.cpp
include/: SDL3_gfx
include/sdl3/: SDL_revision.h
include/sdl3_gfx/: SDL3_gfx
